# Soi

./: README.md  simple.soi  soi.cabal  stack.yaml
app/: Main.hs
app/Control/Monad/: LLVM.hs
lib-rt/: gen-lib-ll.sh  soi_lib.c
soi-examples/: booley.soi  example.soi  guessing-game.soi  loopy.soi  short-circuit.soi  simple.soi
src/Language/Soi/: Ast.hs  Parser.hs
src/Language/Soi/Internal/: Codegen.hs  Emit.hs  Lexer.x  ParseMonad.hs  Parser.y  Prescan.hs  StdLib.hs
